# modernpackage

./: .gitlab-ci.yml  Makefile  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: check-modernpackage-on-python311.yml
modernpackage/: __init__.py  main.py
tests/: test_main.py
