[project]
name = "modernpackage"
authors = [
    {name = "Name Surname", email = "email@example.com"},
]
description = "Package configuration example using bleeding edge toolset."
readme = "README.md"
requires-python = ">= 3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]
dependencies = []

# [project.urls]
# homepage = "https://github.com/?/modernpackage"

# [project.scripts]
# modernpackage = "modernpackage.main:main"

[project.optional-dependencies]
test = [
    "hatch",
    "ruff",
    "mypy",
    "pip-audit",
    "deadcode",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
addopts = "--cov=. --no-cov-on-fail --cov-fail-under=90.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["**/*.py"]
exclude = ["tests/**"]

[tool.hatch.version]
path = "modernpackage/__init__.py"

[tool.ruff]  # https://docs.astral.sh/ruff/settings/
line-length = 88

[tool.ruff.lint.flake8-quotes]
inline-quotes = "single"

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",    # one blank line before class
    "D213",    # multi line summary second line
    "COM812",  # missing trailing comma
    "ISC001",  # single line implicit string concatenation
    "ANN101",  # deprecated requirement to annotate self
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D"] # allow assert and no docs in tests

[tool.mypy]
exclude = ["build", "dist", ".venv"]
python_version = "3.11"
strict = true
pretty = true
color_output = true
show_error_codes = true
warn_return_any = true
warn_unused_configs = true

[tool.deadcode]
ignore_names = [
    "main",
]
exclude = ["tests"]
